@@ -4347,6 +4347,11 @@ an existing list.</p>
 <h4><a class="toc-backref" href="#id181" id="lexer-properties-section" name="lexer-properties-section">[lexer_properties] Section</a></h4>
 <p>Here any special properties for the Scintilla lexer can be set in the
 format <tt class="docutils literal"><span class="pre">key.name.field=some.value</span></tt>.</p>
+<p>Properties Geany uses are listed in the system filetype files. To find
+other properties you need Geany's source code:</p>
+<pre class="literal-block">
+egrep -o 'GetProperty\w*\(&quot;([^&quot;]+)&quot;[^)]+\)' scintilla/Lex*.cxx
+</pre>
 </div>
 <div class="section">
 <h4><a class="toc-backref" href="#id182" id="settings-section" name="settings-section">[settings] Section</a></h4>
@@ -6354,7 +6359,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-11-17 17:44 UTC.
+Generated on: 2010-11-22 12:42 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
