@@ -1,7 +1,13 @@
+2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * doc/geany.txt, doc/geany.html:
+   Explain how to grep the source for Scintilla lexer properties.
+
+
 2010-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * data/filetypes.xml:
-   Add 'instanceif' keyword for PHP (closes #3109330).
+   Add 'instanceof' keyword for PHP (closes #3109330).
 
 
 2010-11-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
